--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-
+  gogogo
 </body>
+<script src="https://unpkg.com/vue@next"></script>
 <script type="module" src="./index.js"></script>
+<script type="module" src="./router.js"></script>
 <!-- <script type="mo"></script> -->
 
 </html>
