--- a/minivue/index.html
+++ b/minivue/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-
+  <div id="app"></div>
 </body>
-<script type="module" src="./reactivity/index.js"></script>
+<script type="module" src="./index.js"></script>
 
 </html>
