--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 
 </body>
 <script src="https://unpkg.com/vue@next"></script>
-<script type="module" src="./index.js"></script>
-<script type="module" src="./router.js"></script>
+<!-- <script type="module" src="./index.js"></script>
+<script type="module" src="./router.js"></script> -->
 <!-- <script type="mo"></script> -->
+<script>
+  aa = Vue.reactive({ a: 1 })
+  Vue.watchEffect(() => { console.log('a' + aa.a) })
+  aa.a++
+</script>
 
 </html>
