--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 
 <body>
   gogogo
+  <div id="app"></div>
 
 </body>
-<script src="https://unpkg.com/vue@next"></script>
+<!-- <script src="https://unpkg.com/vue@next"></script> -->
 <!-- <script type="module" src="./index.js"></script>
 <script type="module" src="./router.js"></script> -->
 <!-- <script type="mo"></script> -->
-<script>
-  aa = Vue.reactive({ a: 1 })
-  Vue.watchEffect(() => { console.log('a' + aa.a) })
-  aa.a++
-</script>
+<script type="module" src="./main.js"></script>
 
 </html>
