--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   gogogo
-  <div id="app"></div>
+ <div>
+    <div id="app"></div>
+ </div>
 
 </body>
 <!-- <script src="https://unpkg.com/vue@next"></script> -->
